<resources>
    <string name="app_name">EbookPrototype</string>
    <string name="User_Login">User Login</string>
    <string name="Register_Account">Register Account</string>
    <string name="Enter_email">E-mail</string>
    <string name="Enter_Password">Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Login">Login</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Contact_Number">Contact Number</string>
    <string name="Register">Register</string>
    <string name="Welcome">WELCOME TO GROUP4 E-BOOK!</string>
    <string name="Home">Home</string>
    <string name="Favorites">Favorites</string>
    <string name="Search">Search</string>
    <string name="Profile">Profile</string>
    <string name="HomFrag">Home Fragment</string>
    <string name="FavFrag">Favorite Fragment</string>
    <string name="SearchFrag">Search Fragment</string>
    <string name="ProfileFrag">Profile Fragment</string>
    <string name="LogOutApp">Log Out</string>
    <string name="ViewPDF">View PDF</string>
    <string name="Group4">Available E-Books</string>
    <string name="AudioPage">Available Audio Books</string>
    <string name="Subscribe">Subscribe</string>

</resources>